Fixing position of scrollbar

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -25,6 +25,7 @@ body {
 /* Let's get this party started */
 ::-webkit-scrollbar {
     width: 6px;
+    padding: 20px;
 }
 
 /* Track */
